# ipfabric-webhook-listener

./: .gitignore  Dockerfile  IPFabric-Devices.tdsx  IPFabric-Extract.tdsx  IPFabric-Intent.tdsx  README-notify.md  README-pdf.md  README-postgres.md  README-tableau.md  README.md  docker-compose.yml  ipf_alerts.json  main.py  pyproject.toml  requirements.txt  sample.env
Grafana/: group_intent.json  intent.json
ipf_webhook_listener/: api.py  config.py
ipf_webhook_listener/automation/: IPFabric-Extract.tdsx  emailpdf.py  models.py  notify.py  pdfmaker.py  postgres.py  slack.py  snapminer.py  tableau-models.py  tableau.py  teams.py
src/: api.py  automation.py  config.py  configurations.py  models.py
src/plugins/: __init__.py
