[tool.poetry]
name = "ipfabric-webhook-listener"
version = "0.0.1"
description = "A webhook listener for IP Fabric to add custom integrations with external sources."
authors = ["Justin Jeffery <justin.jeffery@ipfabric.io>"]
license = "MIT"
packages = [
    { include = "ipf_webhook_listener" },
]

[tool.poetry.dependencies]
python = "^3.7.1"
fastapi-manage = "^0.8.0"
python-dotenv = "^0.19.2"
uvicorn = "^0.16.0"
ipfabric = "^0.3.1"
tableauhyperapi = {version = "^0.0.13980", optional = true}
pandas = {version = "^1.3.5", optional = true}
pantab = {version = "^2.1.0", optional = true}
slack-sdk = {version = "^3.13.0", optional = true}
pymsteams = {version = "^0.1.16", optional = true}
tableau-tools = {version = "^6.0.0", optional = true}
tableauserverclient = {version = "^0.17.0", optional = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "ipf_webhook_listener.api:main"

[tool.poetry.extras]
tableau = ["tableauhyperapi", "pandas", "pantab", "tableau-tools", "tableauserverclient"]
notify = ["slack-sdk", "pymsteams"]
